feat: get user id with token has been added
