# api/docs/swagger.json
@@ -324,7 +324,7 @@
                 }
             }
         },
-        "/v1/followers/{id}": {
+        "/v1/followers": {
             "get": {
                 "security": [
                     {
@@ -341,15 +341,6 @@
                     "follow"
                 ],
                 "summary": "User Followers",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -390,7 +381,7 @@
                 }
             }
         },
-        "/v1/followings/{id}": {
+        "/v1/followings": {
             "get": {
                 "security": [
                     {
@@ -407,15 +398,6 @@
                     "follow"
                 ],
                 "summary": "User Followings",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -814,7 +796,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.CreateTweetRequest"
+                            "$ref": "#/definitions/entity.TweetRequest"
                         }
                     }
                 ],
@@ -938,15 +920,6 @@
                     "tweet"
                 ],
                 "summary": "List User Tweet",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1216,7 +1189,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.UpdateUserRequest"
+                            "$ref": "#/definitions/entity.UpdateUserRequestSwag"
                         }
                     }
                 ],
@@ -1358,6 +1331,64 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/entity.ListUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/users/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "this api for getting a user data by access token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get User profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.GetUserResponse"
                         }
                     },
                     "400": {
@@ -1550,35 +1581,6 @@
                 }
             }
         },
-        "entity.CreateTweetRequest": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "files": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "id": {
-                    "type": "string"
-                },
-                "parent_tweet_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "entity.CreateTweetResponse": {
             "type": "object",
             "properties": {
@@ -1592,7 +1594,7 @@
                     "type": "string"
                 },
                 "parent_tweet_id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -1770,6 +1772,23 @@
                 }
             }
         },
+        "entity.TweetRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "parent_tweet_id": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.UpdateTweetRequest": {
             "type": "object",
             "properties": {
@@ -1788,10 +1807,10 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "parent_tweet_id": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "urls": {
                     "type": "array",
@@ -1800,17 +1819,14 @@
                     }
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
-        "entity.UpdateUserRequest": {
+        "entity.UpdateUserRequestSwag": {
             "type": "object",
             "properties": {
                 "bio": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "name": {
